[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/UI/ChangeLevelRect.gd" type="Script" id=1]
[ext_resource path="res://Resources/UI/background_frame.png" type="Texture" id=2]
[ext_resource path="res://Scenes/GameObjects/UIScenes/Monologue.tscn" type="PackedScene" id=3]

[node name="ChangeLevelRect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -383.882
margin_top = -680.212
margin_right = -383.882
margin_bottom = -680.212
rect_scale = Vector2( 26.7087, 33.2237 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" parent="." instance=ExtResource( 3 )]
texture = null

[node name="FadeInTween" type="Tween" parent="."]

[node name="FadeOutTween" type="Tween" parent="."]

[node name="ScreenTexture" type="TextureRect" parent="."]
margin_left = 14.0
margin_top = 20.0
margin_right = 89.0
margin_bottom = 62.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
